--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "esbuild-wasm": "0.8.27",
     "immer": "^8.0.1",
     "jscodeshift": "0.11.0",
+    "lerna": "3.22.1",
     "localforage": "^1.9.0",
     "monaco-editor": "0.21.3",
     "monaco-jsx-highlighter": "0.0.15",
